--- a/index.html
+++ b/index.html
@@ -9,56 +9,59 @@
   </head>
   <body>
     <div class="wrap">
-      <div class="navbar">
-        <ul>
-          <li>THE WEBLOGUE</li>
-          <li>BACK ISSUES</li>
-          <li>ABOUT OUR PAPER</li>
-        </ul>
+      <div class="col1">
+        <div class="navbar">
+          <ul>
+            <li>THE WEBLOGUE</li>
+            <li>BACK ISSUES</li>
+            <li>ABOUT OUR PAPER</li>
+          </ul>
 
-      </div>
-      <div class="logo">
-        <img src="IMG/logo.png" alt="logo">
-      </div>
-      <div class="columns">
-
-      <div class="text">
-        <h1>“Give me problems, give me work.”</h1>
-        <p>In the year 1878 I took my degree of Doctor of Medicine of the University of London, and proceeded to Netley to go through the course prescribed for surgeons in the army. Having completed my studies there, I was duly attached to the Fifth Northumberland Fusiliers as Assistant Surgeon. The regiment was stationed in India at the time, and before I could join it, the second Afghan war had broken out. On landing at Bombay, I learned that my corps had advanced through the passes, and was already deep in the enemy’s country.</p>
-      </div>
-      <div class="images">
-        <p>victors & villains</p>
-        <div class="holmes">
-          <img src="img/f-holmes.jpg" alt="holmes">
-          <p>SHERLOCK</p> <p>HOLMES</p>
         </div>
-        <div class="watson">
-          <img src="img/f-watson.jpg" alt="watson">
-          <p>DR JOHN HEMISH</p>
-          <p>WATSON</p>
-        </div>
-        <div class="mycroft">
-          <img src="img/f-mycroft.jpg" alt="mycroft">
-          <p>MYCROFT</p>
-          <p>HOLMES</p>
-        </div>
-        <div class="moriarty">
-          <img src="img/f-moriarty.jpg" alt="moriarty">
-          <p>PROF JAMES</p>
-          <p>MORIARTY</p>
-        </div>
-        <div class="adler">
-          <img src="img/f-adler.jpg" alt="adler">
-          <p>IRENE</p>
-          <p>ADLER</p>
-        </div>
-        <div class="winter">
-          <img src="img/f-winter.jpg" alt="winter">
-          <p>JAMES</p>
-          <p>WINTER</p>
+        <div class="logo">
+          <img src="IMG/logo.png" alt="logo">
         </div>
       </div>
-    </div>
+      <div class="col2">
+        <div class="text">
+          <h1>“Give me problems, give me work.”</h1>
+          <p>In the year 1878 I took my degree of Doctor of Medicine of the University of London, and proceeded to Netley to go through the course prescribed for surgeons in the army. Having completed my studies there, I was duly attached to the Fifth Northumberland Fusiliers as Assistant Surgeon. The regiment was stationed in India at the time, and before I could join it, the second Afghan war had broken out. On landing at Bombay, I learned that my corps had advanced through the passes, and was already deep in the enemy’s country.</p>
+        </div>
+        <div class="image-header">
+          <p>victors & villains</p>
+        </div>
+        <div class="images">
+          <div class="holmes">
+            <img src="img/f-holmes.jpg" alt="holmes">
+            <p>SHERLOCK</p> <p>HOLMES</p>
+          </div>
+          <div class="watson">
+            <img src="img/f-watson.jpg" alt="watson">
+            <p>DR JOHN HEMISH</p>
+            <p>WATSON</p>
+          </div>
+          <div class="mycroft">
+            <img src="img/f-mycroft.jpg" alt="mycroft">
+            <p>MYCROFT</p>
+            <p>HOLMES</p>
+          </div>
+          <div class="moriarty">
+            <img src="img/f-moriarty.jpg" alt="moriarty">
+            <p>PROF JAMES</p>
+            <p>MORIARTY</p>
+          </div>
+          <div class="adler">
+            <img src="img/f-adler.jpg" alt="adler">
+            <p>IRENE</p>
+            <p>ADLER</p>
+          </div>
+          <div class="winter">
+            <img src="img/f-winter.jpg" alt="winter">
+            <p>JAMES</p>
+            <p>WINTER</p>
+          </div>
+        </div>
+      </div>
 
 
     </div>
