adjust the navbar

--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
   </head>
   <body>
     <div class="wrap">
-      <div class="col1">
-        <div class="navbar">
-          <ul>
-            <li>THE WEBLOGUE</li>
-            <li>BACK ISSUES</li>
-            <li>ABOUT OUR PAPER</li>
-          </ul>
-
-        </div>
-        <div class="logo">
-          <img src="IMG/logo.png" alt="logo">
-        </div>
+        <div class="col1">
+          <div class="logo">
+            <img id="logo" src="IMG/logo.png" alt="logo">
+          </div>
+          <div class="navbar">
+            <ul>
+              <li>THE WEBLOGUE</li>
+              <li>BACK ISSUES</li>
+              <li>ABOUT OUR PAPER</li>
+            </ul>
+          </div>
       </div>
       <div class="col2">
         <div class="text">
