center nav bar list items and keep them from moving until designated resize.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           </div>
           <div class="navbar">
             <ul>
-              <li>THE WEBLOGUE</li>
-              <li>BACK ISSUES</li>
-              <li>ABOUT OUR PAPER</li>
+              <li id="one">THE<br>WEBLOGUE</li>
+              <li id="two">BACK<br>ISSUES</li>
+              <li id="three">ABOUT<br>OUR PAPER</li>
             </ul>
           </div>
       </div>
